add delete user API
